# satellite-constellation

./: .gitignore  CMakeLists.txt  README.md  RF_LINK_IMPLEMENTATION.md
core/: PythonBindings.cpp  Simulation.cpp  main.cpp
data/: AlertSystem.h  Constants.h  GroundStationData.h
dynamics/: CelestialBody.cpp  MathUtils.cpp  Orbit.cpp  Orbit.h  Satellite.cpp  Satellite.h  SpacecraftEnvironment.h  Universe.cpp  Universe.h
dynamics/bodies/: CelestialBody.h  GroundStation.cpp  GroundStation.h  Satellite.cpp  Satellite.h  Spacecraft.cpp  Spacecraft.h
dynamics/components/: CMG.cpp  CMG.h  Component.h  GPS.cpp  GPS.h  IMU.cpp  IMU.h  Magnetometer.cpp  Magnetometer.h  Magnetorquer.cpp  Magnetorquer.h  ReactionWheel.cpp  ReactionWheel.h  SolarPanel.cpp  SolarPanel.h  SunSensor.cpp  SunSensor.h  Thruster.cpp  Thruster.h
dynamics/environmentalModels/: EnvironmentalModels.cpp  EnvironmentalModels.h
dynamics/gravityModels/: GravityModel.cpp  GravityModel.h
dynamics/integrators/: RK4Integrator.cpp  RK4Integrator.h
dynamics/sensors/: IMU.h
fsw/: FlightSoftware.cpp  FlightSoftware.h  FlightSoftwareModule.h  FlightSoftwareTask.h  PIDController.cpp  PIDController.h  PassiveFSW.cpp  PassiveFSW.h  StandardFSW.cpp  StandardFSW.h
fsw/adcs/: ADCSController.cpp  ADCSController.h  AttitudeEstimator.cpp  AttitudeEstimator.h  GroundTrackingADCS.cpp  GroundTrackingADCS.h  PassiveFSW.cpp  PassiveFSW.h  StandardFSW.cpp  StandardFSW.h
fsw/power/: PowerManager.cpp  PowerManager.h
fsw/stationkeeping/: StationKeepingController.cpp  StationKeepingController.h
gui/: Camera.cpp  GUI.cpp
include/: Camera.h  CelestialBody.h  CommLink.h  Config.h  Constants.h  Cube.h  FlightSoftwareTask.h  GUI.h  GroundStation.h  MathUtils.h  OBJMesh.h  Renderer.h  Satellite.h  Simulation.h  Universe.h
models/: README.md
models/satellite/: satellite.mtl
models/starlink/: starlink.mtl
rendering/: Camera.cpp  GUI.cpp  GUI.h  OBJMesh.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VisualizationState.h
rendering/loaders/: OBJMesh.cpp
rendering/primitives/: Cube.cpp  LineRenderer.cpp  LineRenderer.h  Sphere.cpp  Sphere.h
rendering/shaders/: sphere.frag  sphere.vert
resources/models/cubesat1U/: cubesat1U.mtl
resources/shaders/: line.frag  line.vert
scenarios/: GEOScenario.cpp  GEOScenario.h  GPSScenario.cpp  GPSScenario.h  MolniyaScenario.cpp  MolniyaScenario.h  README.md  SSOTestScenario.cpp  SSOTestScenario.h  Scenario.h  ScenarioRegistry.h  StarlinkScenario.cpp  StarlinkScenario.h  adcs_comparison.py  example_cubesat.py  gps_constellation.py  starlink_constellation.py
sensors/: IMU.cpp
shaders/: sphere.frag
src/: Camera.cpp  CelestialBody.cpp  CommLink.cpp  Config.cpp  GUI.cpp  GroundStation.cpp  MathUtils.cpp  OBJMesh.cpp  Orbit.cpp  PassiveFSW.cpp  Renderer.cpp  Satellite.cpp  Shader.cpp  Simulation.cpp  Sphere.cpp  StandardFSW.cpp  Texture.cpp  Universe.cpp  main.cpp
textures/: README.md
util/: MathUtils.h
